# python-container-base

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
scripts/: build-docker.sh  install-dependencies.sh
